--- a/app/templates/results.hbs
+++ b/app/templates/results.hbs
@@ -1,1 +1,196 @@
-{{outlet}}
+<h2>Race
+    <small>Übersicht</small>
+</h2>
+
+
+<table class="table">
+    <thead>
+    <tr>
+        <th>Lap</th>
+        <th>Name</th>
+        <th>Wins</th>
+        <th>Looses</th>
+        <th>Level</th>
+        <th>/</th>
+        <th>/</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+        <th scope="row">1</th>
+        <td>Name</td>
+        <td>0</td>
+        <td>0</td>
+        <td>1</td>
+        <td>/</td>
+        <td>/</td>
+    </tr>
+    <tr>
+        <th scope="row">2</th>
+        <td>Name</td>
+        <td>0</td>
+        <td>0</td>
+        <td>1</td>
+        <td>/</td>
+        <td>/</td>
+    </tr>
+    <tr>
+        <th scope="row">3</th>
+        <td>Name</td>
+        <td>0</td>
+        <td>0</td>
+        <td>1</td>
+        <td>/</td>
+        <td>/</td>
+    </tr>
+    </tbody>
+</table>
+
+
+<h2>Battle
+    <small>Übersicht</small>
+</h2>
+
+<table class="table">
+    <thead>
+    <tr>
+        <th>Lap</th>
+        <th>Name</th>
+        <th>Wins</th>
+        <th>Looses</th>
+        <th>Level</th>
+        <th>Kills</th>
+        <th>Tode</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+        <th scope="row">1</th>
+        <td>Name</td>
+        <td>0</td>
+        <td>0</td>
+        <td>1</td>
+        <td>0</td>
+        <td>0</td>
+    </tr>
+    <tr>
+        <th scope="row">2</th>
+        <td>Name</td>
+        <td>0</td>
+        <td>0</td>
+        <td>1</td>
+        <td>0</td>
+        <td>0</td>
+    </tr>
+    <tr>
+        <th scope="row">3</th>
+        <td>Name</td>
+        <td>0</td>
+        <td>0</td>
+        <td>1</td>
+        <td>0</td>
+        <td>0</td>
+    </tr>
+    </tbody>
+</table>
+
+
+
+
+
+<h2>King of the Hill
+    <small>Übersicht</small>
+</h2>
+
+<table class="table">
+    <thead>
+    <tr>
+        <th>Lap</th>
+        <th>Name</th>
+        <th>Wins</th>
+        <th>Looses</th>
+        <th>Level</th>
+        <th>/</th>
+        <th>/</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+        <th scope="row">1</th>
+        <td>Name</td>
+        <td>0</td>
+        <td>0</td>
+        <td>1</td>
+        <td>/</td>
+        <td>/</td>
+    </tr>
+    <tr>
+        <th scope="row">2</th>
+        <td>Name</td>
+        <td>0</td>
+        <td>0</td>
+        <td>1</td>
+        <td>/</td>
+        <td>/</td>
+    </tr>
+    <tr>
+        <th scope="row">3</th>
+        <td>Name</td>
+        <td>0</td>
+        <td>0</td>
+        <td>1</td>
+        <td>/</td>
+        <td>/</td>
+    </tr>
+    </tbody>
+</table>
+
+
+
+
+<h2>Time Trial
+    <small>Übersicht</small>
+</h2>
+
+<table class="table">
+    <thead>
+    <tr>
+        <th>Lap</th>
+        <th>Name</th>
+        <th>Wins</th>
+        <th>Looses</th>
+        <th>Level</th>
+        <th>Best Time</th>
+        <th>/</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+        <th scope="row">1</th>
+        <td>Name</td>
+        <td>0</td>
+        <td>0</td>
+        <td>1</td>
+        <td>00:00</td>
+        <td>/</td>
+    </tr>
+    <tr>
+        <th scope="row">2</th>
+        <td>Name</td>
+        <td>0</td>
+        <td>0</td>
+        <td>1</td>
+        <td>00:00</td>
+        <td>/</td>
+    </tr>
+    <tr>
+        <th scope="row">3</th>
+        <td>Name</td>
+        <td>0</td>
+        <td>0</td>
+        <td>1</td>
+        <td>00:00</td>
+        <td>/</td>
+    </tr>
+    </tbody>
+</table>
