--- a/client/app/templates/application.hbs
+++ b/client/app/templates/application.hbs
@@ -24,6 +24,12 @@
               {{#active-link}}
                 {{link-to "Results" "results"}}
               {{/active-link}}
+              {{#active-link}}
+                {{link-to "Play" "play"}}
+              {{/active-link}}
+              {{#active-link}}
+                {{link-to "Weapons" "weapons"}}
+              {{/active-link}}
             </ul>
             <ul class="nav navbar-nav navbar-right">
               {{#active-link}}
