--- a/client/app/templates/results.hbs
+++ b/client/app/templates/results.hbs
@@ -43,8 +43,8 @@
     <tr>
         <th scope="row">1</th>
         <td>Name</td>
-        <td>0</td>
-        <td>0</td>
+        <td bgcolor="#00FF00">0</td>
+        <td bgcolor="#FF0000">0</td>
         <td>1</td>
         <td>/</td>
         <td>/</td>
@@ -52,8 +52,8 @@
     <tr>
         <th scope="row">2</th>
         <td>Name</td>
-        <td>0</td>
-        <td>0</td>
+        <td bgcolor="#00FF00">0</td>
+        <td bgcolor="#FF0000">0</td>
         <td>1</td>
         <td>/</td>
         <td>/</td>
@@ -61,8 +61,8 @@
     <tr>
         <th scope="row">3</th>
         <td>Name</td>
-        <td>0</td>
-        <td>0</td>
+        <td bgcolor="#00FF00">0</td>
+        <td bgcolor="#FF0000">0</td>
         <td>1</td>
         <td>/</td>
         <td>/</td>
@@ -91,8 +91,8 @@
     <tr>
         <th scope="row">1</th>
         <td>Name</td>
-        <td>0</td>
-        <td>0</td>
+        <td bgcolor="#00FF00">0</td>
+        <td bgcolor="#FF0000">0</td>
         <td>1</td>
         <td>0</td>
         <td>0</td>
@@ -100,8 +100,8 @@
     <tr>
         <th scope="row">2</th>
         <td>Name</td>
-        <td>0</td>
-        <td>0</td>
+        <td bgcolor="#00FF00">0</td>
+        <td bgcolor="#FF0000">0</td>
         <td>1</td>
         <td>0</td>
         <td>0</td>
@@ -109,8 +109,8 @@
     <tr>
         <th scope="row">3</th>
         <td>Name</td>
-        <td>0</td>
-        <td>0</td>
+        <td bgcolor="#00FF00">0</td>
+        <td bgcolor="#FF0000">0</td>
         <td>1</td>
         <td>0</td>
         <td>0</td>
@@ -142,8 +142,8 @@
     <tr>
         <th scope="row">1</th>
         <td>Name</td>
-        <td>0</td>
-        <td>0</td>
+        <td bgcolor="#00FF00">0</td>
+        <td bgcolor="#FF0000">0</td>
         <td>1</td>
         <td>/</td>
         <td>/</td>
@@ -151,8 +151,8 @@
     <tr>
         <th scope="row">2</th>
         <td>Name</td>
-        <td>0</td>
-        <td>0</td>
+        <td bgcolor="#00FF00">0</td>
+        <td bgcolor="#FF0000">0</td>
         <td>1</td>
         <td>/</td>
         <td>/</td>
@@ -160,8 +160,8 @@
     <tr>
         <th scope="row">3</th>
         <td>Name</td>
-        <td>0</td>
-        <td>0</td>
+        <td bgcolor="#00FF00">0</td>
+        <td bgcolor="#FF0000">0</td>
         <td>1</td>
         <td>/</td>
         <td>/</td>
@@ -192,8 +192,8 @@
     <tr>
         <th scope="row">1</th>
         <td>Name</td>
-        <td>0</td>
-        <td>0</td>
+        <td bgcolor="#00FF00">0</td>
+        <td bgcolor="#FF0000">0</td>
         <td>1</td>
         <td>00:00</td>
         <td>/</td>
@@ -201,8 +201,8 @@
     <tr>
         <th scope="row">2</th>
         <td>Name</td>
-        <td>0</td>
-        <td>0</td>
+        <td bgcolor="#00FF00">0</td>
+        <td bgcolor="#FF0000">0</td>
         <td>1</td>
         <td>00:00</td>
         <td>/</td>
@@ -210,8 +210,8 @@
     <tr>
         <th scope="row">3</th>
         <td>Name</td>
-        <td>0</td>
-        <td>0</td>
+        <td bgcolor="#00FF00">0</td>
+        <td bgcolor="#FF0000">0</td>
         <td>1</td>
         <td>00:00</td>
         <td>/</td>
