--- a/client/app/templates/components/player-list.hbs
+++ b/client/app/templates/components/player-list.hbs
@@ -1,6 +1,6 @@
 <h2 class="page-header">{{title}}</h2>
 <ul class="list-group">
   {{#each players as |player|}}
-      <li class="list-group-item">{{player.name}} ({{player.id}})</li>
+      <li class="list-group-item">{{player.name}}</li>
   {{/each}}
 </ul>
