--- a/client/app/templates/results.hbs
+++ b/client/app/templates/results.hbs
@@ -1,224 +1,217 @@
-<h2>Race
-    <small>Übersicht</small>
-</h2>
-
-<h2>Total</h2>
-<table class="table">
-    <thead>
-    <tr>
-        <th>#</th>
-        <th>Player</th>
-        <th>Points</th>
-        <th>Won</th>
-        <th>Lost</th>
-    </tr>
-    </thead>
-    <tbody>
-
-    {{#each model.results as |result|}}
-        <tr>
-            <th scope="row">{{result.rank}}</th>
-            <td>{{result.player.name}}</td>
-            <td>{{result.total}}</td>
-            <td>???</td>
-            <td>???</td>
-        </tr>
-    {{/each}}
-    </tbody>
-</table>
-<hr/>
+<ul class="nav nav-tabs" role="tablist">
+    <li role="presentation" class="active"><a href="#total" role="tab" data-toggle="tab">Total</a></li>
+    <li role="presentation"><a href="#race" role="tab" data-toggle="tab">Race</a></li>
+    <li role="presentation"><a href="#battle" role="tab" data-toggle="tab">Battle</a></li>
+    <li role="presentation"><a href="#koth" role="tab" data-toggle="tab">King of the Hill</a></li>
+    <li role="presentation"><a href="#time" data-toggle="tab">Time Trial</a></li>
+</ul>
+<div class="tab-content">
+    <div id="total" role="tabpanel" class="tab-pane fade active in">
+      {{result-table title="Total" results=model.results.total}}
+    </div>
+    <div id="race" role="tabpanel" class="tab-pane">
+      {{result-table title="Race" results=model.results.race}}
+    </div>
+    <div id="battle" role="tabpanel" class="tab-pane">
+      {{result-table title="Battle" results=model.results.battle}}
+    </div>
+    <div id="koth" role="tabpanel" class="tab-pane">
+      {{result-table title="King of the Hill" results=model.results.koth}}
+    </div>
+    <div id="time" role="tabpanel" class="tab-pane">
+        {{result-table title="Time Trial" results=model.results.time}}
+    </div>
+</div>
 
 
+<!--<table class="table">-->
+    <!--<thead>-->
+    <!--<tr>-->
+        <!--<th>Lap</th>-->
+        <!--<th>Name</th>-->
+        <!--<th>Wins</th>-->
+        <!--<th>Looses</th>-->
+        <!--<th>Level</th>-->
+        <!--<th>/</th>-->
+        <!--<th>/</th>-->
+    <!--</tr>-->
+    <!--</thead>-->
+    <!--<tbody>-->
+    <!--<tr>-->
+        <!--<th scope="row">1</th>-->
+        <!--<td>Name</td>-->
+        <!--<td bgcolor="#00FF00">0</td>-->
+        <!--<td bgcolor="#FF0000">0</td>-->
+        <!--<td>1</td>-->
+        <!--<td>/</td>-->
+        <!--<td>/</td>-->
+    <!--</tr>-->
+    <!--<tr>-->
+        <!--<th scope="row">2</th>-->
+        <!--<td>Name</td>-->
+        <!--<td bgcolor="#00FF00">0</td>-->
+        <!--<td bgcolor="#FF0000">0</td>-->
+        <!--<td>1</td>-->
+        <!--<td>/</td>-->
+        <!--<td>/</td>-->
+    <!--</tr>-->
+    <!--<tr>-->
+        <!--<th scope="row">3</th>-->
+        <!--<td>Name</td>-->
+        <!--<td bgcolor="#00FF00">0</td>-->
+        <!--<td bgcolor="#FF0000">0</td>-->
+        <!--<td>1</td>-->
+        <!--<td>/</td>-->
+        <!--<td>/</td>-->
+    <!--</tr>-->
+    <!--</tbody>-->
+<!--</table>-->
 
 
-<table class="table">
-    <thead>
-    <tr>
-        <th>Lap</th>
-        <th>Name</th>
-        <th>Wins</th>
-        <th>Looses</th>
-        <th>Level</th>
-        <th>/</th>
-        <th>/</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr>
-        <th scope="row">1</th>
-        <td>Name</td>
-        <td bgcolor="#00FF00">0</td>
-        <td bgcolor="#FF0000">0</td>
-        <td>1</td>
-        <td>/</td>
-        <td>/</td>
-    </tr>
-    <tr>
-        <th scope="row">2</th>
-        <td>Name</td>
-        <td bgcolor="#00FF00">0</td>
-        <td bgcolor="#FF0000">0</td>
-        <td>1</td>
-        <td>/</td>
-        <td>/</td>
-    </tr>
-    <tr>
-        <th scope="row">3</th>
-        <td>Name</td>
-        <td bgcolor="#00FF00">0</td>
-        <td bgcolor="#FF0000">0</td>
-        <td>1</td>
-        <td>/</td>
-        <td>/</td>
-    </tr>
-    </tbody>
-</table>
+<!--<h2>Battle-->
+    <!--<small>Übersicht</small>-->
+<!--</h2>-->
 
-
-<h2>Battle
-    <small>Übersicht</small>
-</h2>
-
-<table class="table">
-    <thead>
-    <tr>
-        <th>Lap</th>
-        <th>Name</th>
-        <th>Wins</th>
-        <th>Looses</th>
-        <th>Level</th>
-        <th>Kills</th>
-        <th>Tode</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr>
-        <th scope="row">1</th>
-        <td>Name</td>
-        <td bgcolor="#00FF00">0</td>
-        <td bgcolor="#FF0000">0</td>
-        <td>1</td>
-        <td>0</td>
-        <td>0</td>
-    </tr>
-    <tr>
-        <th scope="row">2</th>
-        <td>Name</td>
-        <td bgcolor="#00FF00">0</td>
-        <td bgcolor="#FF0000">0</td>
-        <td>1</td>
-        <td>0</td>
-        <td>0</td>
-    </tr>
-    <tr>
-        <th scope="row">3</th>
-        <td>Name</td>
-        <td bgcolor="#00FF00">0</td>
-        <td bgcolor="#FF0000">0</td>
-        <td>1</td>
-        <td>0</td>
-        <td>0</td>
-    </tr>
-    </tbody>
-</table>
+<!--<table class="table">-->
+    <!--<thead>-->
+    <!--<tr>-->
+        <!--<th>Lap</th>-->
+        <!--<th>Name</th>-->
+        <!--<th>Wins</th>-->
+        <!--<th>Looses</th>-->
+        <!--<th>Level</th>-->
+        <!--<th>Kills</th>-->
+        <!--<th>Tode</th>-->
+    <!--</tr>-->
+    <!--</thead>-->
+    <!--<tbody>-->
+    <!--<tr>-->
+        <!--<th scope="row">1</th>-->
+        <!--<td>Name</td>-->
+        <!--<td bgcolor="#00FF00">0</td>-->
+        <!--<td bgcolor="#FF0000">0</td>-->
+        <!--<td>1</td>-->
+        <!--<td>0</td>-->
+        <!--<td>0</td>-->
+    <!--</tr>-->
+    <!--<tr>-->
+        <!--<th scope="row">2</th>-->
+        <!--<td>Name</td>-->
+        <!--<td bgcolor="#00FF00">0</td>-->
+        <!--<td bgcolor="#FF0000">0</td>-->
+        <!--<td>1</td>-->
+        <!--<td>0</td>-->
+        <!--<td>0</td>-->
+    <!--</tr>-->
+    <!--<tr>-->
+        <!--<th scope="row">3</th>-->
+        <!--<td>Name</td>-->
+        <!--<td bgcolor="#00FF00">0</td>-->
+        <!--<td bgcolor="#FF0000">0</td>-->
+        <!--<td>1</td>-->
+        <!--<td>0</td>-->
+        <!--<td>0</td>-->
+    <!--</tr>-->
+    <!--</tbody>-->
+<!--</table>-->
 
 
 
 
 
-<h2>King of the Hill
-    <small>Übersicht</small>
-</h2>
+<!--<h2>King of the Hill-->
+    <!--<small>Übersicht</small>-->
+<!--</h2>-->
 
-<table class="table">
-    <thead>
-    <tr>
-        <th>Lap</th>
-        <th>Name</th>
-        <th>Wins</th>
-        <th>Looses</th>
-        <th>Level</th>
-        <th>/</th>
-        <th>/</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr>
-        <th scope="row">1</th>
-        <td>Name</td>
-        <td bgcolor="#00FF00">0</td>
-        <td bgcolor="#FF0000">0</td>
-        <td>1</td>
-        <td>/</td>
-        <td>/</td>
-    </tr>
-    <tr>
-        <th scope="row">2</th>
-        <td>Name</td>
-        <td bgcolor="#00FF00">0</td>
-        <td bgcolor="#FF0000">0</td>
-        <td>1</td>
-        <td>/</td>
-        <td>/</td>
-    </tr>
-    <tr>
-        <th scope="row">3</th>
-        <td>Name</td>
-        <td bgcolor="#00FF00">0</td>
-        <td bgcolor="#FF0000">0</td>
-        <td>1</td>
-        <td>/</td>
-        <td>/</td>
-    </tr>
-    </tbody>
-</table>
-
-
+<!--<table class="table">-->
+    <!--<thead>-->
+    <!--<tr>-->
+        <!--<th>Lap</th>-->
+        <!--<th>Name</th>-->
+        <!--<th>Wins</th>-->
+        <!--<th>Looses</th>-->
+        <!--<th>Level</th>-->
+        <!--<th>/</th>-->
+        <!--<th>/</th>-->
+    <!--</tr>-->
+    <!--</thead>-->
+    <!--<tbody>-->
+    <!--<tr>-->
+        <!--<th scope="row">1</th>-->
+        <!--<td>Name</td>-->
+        <!--<td bgcolor="#00FF00">0</td>-->
+        <!--<td bgcolor="#FF0000">0</td>-->
+        <!--<td>1</td>-->
+        <!--<td>/</td>-->
+        <!--<td>/</td>-->
+    <!--</tr>-->
+    <!--<tr>-->
+        <!--<th scope="row">2</th>-->
+        <!--<td>Name</td>-->
+        <!--<td bgcolor="#00FF00">0</td>-->
+        <!--<td bgcolor="#FF0000">0</td>-->
+        <!--<td>1</td>-->
+        <!--<td>/</td>-->
+        <!--<td>/</td>-->
+    <!--</tr>-->
+    <!--<tr>-->
+        <!--<th scope="row">3</th>-->
+        <!--<td>Name</td>-->
+        <!--<td bgcolor="#00FF00">0</td>-->
+        <!--<td bgcolor="#FF0000">0</td>-->
+        <!--<td>1</td>-->
+        <!--<td>/</td>-->
+        <!--<td>/</td>-->
+    <!--</tr>-->
+    <!--</tbody>-->
+<!--</table>-->
 
 
-<h2>Time Trial
-    <small>Übersicht</small>
-</h2>
 
-<table class="table">
-    <thead>
-    <tr>
-        <th>Lap</th>
-        <th>Name</th>
-        <th>Wins</th>
-        <th>Looses</th>
-        <th>Level</th>
-        <th>Best Time</th>
-        <th>/</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr>
-        <th scope="row">1</th>
-        <td>Name</td>
-        <td bgcolor="#00FF00">0</td>
-        <td bgcolor="#FF0000">0</td>
-        <td>1</td>
-        <td>00:00</td>
-        <td>/</td>
-    </tr>
-    <tr>
-        <th scope="row">2</th>
-        <td>Name</td>
-        <td bgcolor="#00FF00">0</td>
-        <td bgcolor="#FF0000">0</td>
-        <td>1</td>
-        <td>00:00</td>
-        <td>/</td>
-    </tr>
-    <tr>
-        <th scope="row">3</th>
-        <td>Name</td>
-        <td bgcolor="#00FF00">0</td>
-        <td bgcolor="#FF0000">0</td>
-        <td>1</td>
-        <td>00:00</td>
-        <td>/</td>
-    </tr>
-    </tbody>
-</table>
+
+<!--<h2>Time Trial-->
+    <!--<small>Übersicht</small>-->
+<!--</h2>-->
+
+<!--<table class="table">-->
+    <!--<thead>-->
+    <!--<tr>-->
+        <!--<th>Lap</th>-->
+        <!--<th>Name</th>-->
+        <!--<th>Wins</th>-->
+        <!--<th>Looses</th>-->
+        <!--<th>Level</th>-->
+        <!--<th>Best Time</th>-->
+        <!--<th>/</th>-->
+    <!--</tr>-->
+    <!--</thead>-->
+    <!--<tbody>-->
+    <!--<tr>-->
+        <!--<th scope="row">1</th>-->
+        <!--<td>Name</td>-->
+        <!--<td bgcolor="#00FF00">0</td>-->
+        <!--<td bgcolor="#FF0000">0</td>-->
+        <!--<td>1</td>-->
+        <!--<td>00:00</td>-->
+        <!--<td>/</td>-->
+    <!--</tr>-->
+    <!--<tr>-->
+        <!--<th scope="row">2</th>-->
+        <!--<td>Name</td>-->
+        <!--<td bgcolor="#00FF00">0</td>-->
+        <!--<td bgcolor="#FF0000">0</td>-->
+        <!--<td>1</td>-->
+        <!--<td>00:00</td>-->
+        <!--<td>/</td>-->
+    <!--</tr>-->
+    <!--<tr>-->
+        <!--<th scope="row">3</th>-->
+        <!--<td>Name</td>-->
+        <!--<td bgcolor="#00FF00">0</td>-->
+        <!--<td bgcolor="#FF0000">0</td>-->
+        <!--<td>1</td>-->
+        <!--<td>00:00</td>-->
+        <!--<td>/</td>-->
+    <!--</tr>-->
+    <!--</tbody>-->
+<!--</table>-->
